<resources>
    <string name="app_name">Afisha c.Tiraspol</string>
    <string name="title_main" translatable="false">@string/app_name</string>

    <string name="soon">Soon</string>
    <string name="news">News</string>
    <string name="about">Contacts</string>

    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>il
    <string name="update">Refresh</string>
    <string name="share">Share the application</string>
    <string name="yet_empty">No content</string>
    <string name="developer_email" translatable="false">fallgamlet@yandex.ru</string>
    <string name="developer_contact_info">Developer contact info\nNickname: fallGamlet</string>
    <string name="phone_org_autoanswer_1" translatable="false">0 (533) 8-15-19</string>
    <string name="phone_org_autoanswer_2" translatable="false">14-04</string>
    <string name="org_contact_info">Contact information of the cinema Tiraspol</string>
    <string name="phone_org_cashbox" translatable="false">0 (533) 7-35-26</string>
    <string name="label_address">Address</string>
    <string name="org_address">Tiraspol, 25 October, 53</string>
    <string name="org_desc_info">The schedule may change. Specify the time of sessions before going to the cinema</string>
    <string name="label_cashbox_with_worktime">Cashbox (с 10:00 до 22:00)</string>
    <string name="label_autoanswer">Autoanswer</string>
    <string name="room_blue">Blue room</string>
    <string name="room_bordo">Bordo room</string>
    <string name="room_dvd">Small room</string>
    <string name="msg_not_found_intent_for_view_google_map">No apps found for Google Maps</string>
    <string name="msg_not_found_intent_for_email">No apps found to send email</string>
    <string name="app_id" translatable="false">com.fallgamlet.dnestrcinema</string>

    <string name="label_from">from</string>
    <string name="label_trailer">Trailer</string>

    <string name="label_country">Country:</string>
    <string name="label_director">Director:</string>
    <string name="label_scenario">Scenario:</string>
    <string name="label_actors">Actors:</string>
    <string name="label_agelimit">Age limit:</string>
    <string name="label_duration">Duration:</string>
    <string name="label_genre">Genre:</string>
    <string name="label_budget">Budget:</string>
    <string name="label_buy_ticket">Buy ticket</string>
    <string name="today">Today</string>
    <string name="tickets">Tickets</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="instraction_to_get_login_and_passwords">If you already bought tickets through the cinema \"Tiraspol\" site (kinotir.md), then the \"password\" should have come automatically by email</string>
    <string name="title_login">Login</string>
    <string name="label_change_user">Change user</string>
    <string name="label_order">Order</string>
    <string name="label_room">Room</string>
    <string name="label_session_time">Session time</string>
    <string name="label_session_date">Session date</string>
    <string name="label_status">Status</string>
    <string name="msg_login_fail">Incorrect email or password</string>

    <string name="label_more">More</string>
    <string name="label_choose_room">Choose room</string>

    <string name="send_email_chooser_title">Choose email application</string>
    <string name="err_msg_phone_caller_not_found">Phone caller not found</string>
    <string name="err_msg_email_sender_not_found">Email application not found</string>
    <string name="err_msg_webbrowser_not_found">Web browser application not found</string>

</resources>
