<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context="com.fallgamlet.dnestrcinema.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/SpaceMiddle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/org_contact_info" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="@dimen/SpaceMiddle" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_autoanswer" />

        <include android:id="@+id/phoneAutoAnswer1"
            layout="@layout/call_phone" />

        <include android:id="@+id/phoneAutoAnswer2"
            layout="@layout/call_phone" />


        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="@dimen/SpaceMiddle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cashbox_with_worktime" />

        <include android:id="@+id/phoneCashbox"
            layout="@layout/call_phone" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="@dimen/SpaceSmall" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_address"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/org_address"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/org_desc_info"/>

        <!--ImageView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:src="@drawable/scheme"
            android:contentDescription="@null" /-->

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="@dimen/SpaceBig" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer_contact_info" />

        <include android:id="@+id/emailDeveloper"
            layout="@layout/send_email" />


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
