<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorBgLight">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/activity_h_margin"
        android:paddingRight="@dimen/activity_h_margin"
        android:paddingTop="@dimen/activity_v_margin"
        android:paddingBottom="@dimen/activity_v_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instraction_to_get_login_and_passwords"/>

        <androidx.legacy.widget.Space
            android:layout_width="0dp"
            android:layout_height="32dp" />

        <TextView android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#c91a1a"
            android:text="@string/msg_login_fail"/>

        <androidx.legacy.widget.Space
            android:layout_width="0dp"
            android:layout_height="@dimen/SpaceSmall" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_email">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.legacy.widget.Space
            android:layout_width="0dp"
            android:layout_height="@dimen/SpaceSmall" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_password">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSend"
                android:inputType="textPassword"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.legacy.widget.Space
            android:layout_width="0dp"
            android:layout_height="@dimen/SpaceMiddle" />

        <Button android:id="@+id/loginButton"
            style="@style/AppTheme.ColoredLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/label_login" />

        <androidx.core.widget.ContentLoadingProgressBar android:id="@id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>