<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/SpaceMiddle"
            android:animateLayoutChanges="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/posterImageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:contentDescription="@null"
                app:layout_scrollFlags="scroll|snap"
                app:layout_collapseMode="parallax"
                tools:background="@drawable/ic_photo_empty_240dp"/>

            <LinearLayout android:id="@+id/shortInfoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/SpaceSmall"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/titleView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/TextBigest"
                    tools:text="Title"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_from"/>

                    <androidx.legacy.widget.Space
                        android:layout_width="4dp"
                        android:layout_height="0dp" />

                    <androidx.appcompat.widget.AppCompatTextView android:id="@+id/pubdateView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="dd.mm.yyyy"/>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/roomView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Rooms"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imageList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/SpaceZero"
                android:layout_marginBottom="@dimen/SpaceZero"

                android:padding="0dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/image_item"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/SpaceSmall"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/trailerBtn"
                    style="@style/AppTheme.ColoredLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/label_trailer"
                    android:visibility="gone"
                    tools:visibility="visible"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buyTicketButton"
                    style="@style/AppTheme.ColoredLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/label_buy_ticket"
                    android:visibility="gone"
                    tools:visibility="visible"/>

            </LinearLayout>


            <include android:id="@+id/durationView"
                layout="@layout/property_item" />

            <include android:id="@+id/genreView"
                layout="@layout/property_item" />

            <include android:id="@+id/ageLimitView"
                layout="@layout/property_item" />

            <include android:id="@+id/countryView"
                layout="@layout/property_item" />

            <include android:id="@+id/directorView"
                layout="@layout/property_item" />

            <include android:id="@+id/scenarioView"
                layout="@layout/property_item" />

            <include android:id="@+id/actorsView"
                layout="@layout/property_item" />

            <include android:id="@+id/budgetView"
                layout="@layout/property_item" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/descriptionView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/SpaceSmall" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/semiTransparent">

        <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@null" />

    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
